--- a/templates/certificates/certificate.html
+++ b/templates/certificates/certificate.html
@@ -303,7 +303,7 @@
             </div>
             
             <div class="verification">
-                Verify this certificate at <span class="verification-code">learnix.com/verify/{{verification_code}}</span>
+                Verify this certificate at <span class="verification-code">learnix/verify/{{verification_code}}</span>
             </div>
             
             <div class="certificate-date">Issued on {{issue_date}}</div>
